force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>A request by a client to perform a task.</description>
    <label>Request</label>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>