force-app/main/default/objects/Request__c/fields/Assigned_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Member</label>
    <referenceTo>Guild_Member__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>