force-app/main/default/objects/Request__c/fields/Assigned_Party__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Party__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Party</label>
    <referenceTo>Party__c</referenceTo>
    <relationshipLabel>Requests</relationshipLabel>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>