force-app/main/default/objects/Request__c/fields/Date_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Closed__c</fullName>
    <description>The date the quest was completed</description>
    <label>Date Closed</label>
    <type>Date</type>
</CustomField>