force-app/main/default/objects/Request__c/fields/Date_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Opened__c</fullName>
    <description>The date the quest was given to the guild</description>
    <label>Date Opened</label>
    <type>Date</type>
</CustomField>