force-app/main/default/objects/Request__c/fields/Request_City__c.field-meta.xml
<CustomField>
    <fullName>Request_City__c</fullName>
    <label>Request City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>