force-app/main/default/objects/Request__c/fields/Request_Country__c.field-meta.xml
<CustomField>
    <fullName>Request_Country__c</fullName>
    <label>Request Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>