force-app/main/default/objects/Request__c/fields/Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Request_ID__c</fullName>
    <displayFormat>Request-{000}</displayFormat>
    <label>Request ID</label>
    <type>AutoNumber</type>
</CustomField>