force-app/main/default/objects/Request__c/fields/Request_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Request_Postal_Code__c</fullName>
    <label>Request Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>