force-app/main/default/objects/Request__c/fields/Request_State__c.field-meta.xml
<CustomField>
    <fullName>Request_State__c</fullName>
    <label>Request State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>