force-app/main/default/objects/Request__c/fields/Request_Street__c.field-meta.xml
<CustomField>
    <fullName>Request_Street__c</fullName>
    <label>Request Street</label>
    <type>TextArea</type>
</CustomField>