force-app/main/default/objects/Request__c/fields/Required_Professions__c.field-meta.xml
<CustomField>
    <fullName>Required_Professions__c</fullName>
    <label>Required Professions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Profession</valueSetName>
    </valueSet>
</CustomField>