force-app/main/default/objects/Request__c/fields/Reward__c.field-meta.xml
<CustomField>
    <fullName>Reward__c</fullName>
    <description>Reward for the quest before the guild takes its cut</description>
    <label>Reward</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>