force-app/main/default/objects/Request__c/recordTypes/Expertise.recordType-meta.xml
<RecordType>
    <fullName>Expertise</fullName>
    <active>true</active>
    <label>Expertise</label>
</RecordType>